# Stopwatch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
source/: stopwatch.h
source/Stopwatch/: Stopwatch.hpp  Stopwatch.sln  Stopwatch.vcxproj.filters
source/Stopwatch/Stopwatch/: Stopwatch.vcxproj
source/Stopwatch/UnitTests/: Catch.hpp  UnitTests.vcxproj  main.cpp
source/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  main.cpp
tests/: scope_exit.h  unit_tests.cpp
